show event names as a list

--- a/notebooks/01_funnel_eda.ipynb
+++ b/notebooks/01_funnel_eda.ipynb
@@ -263,8 +263,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a1f7b48b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['page_view',\n",
+       " 'user_engagement',\n",
+       " 'scroll',\n",
+       " 'view_item',\n",
+       " 'session_start',\n",
+       " 'first_visit',\n",
+       " 'view_promotion',\n",
+       " 'add_to_cart',\n",
+       " 'begin_checkout',\n",
+       " 'select_item',\n",
+       " 'view_search_results',\n",
+       " 'add_shipping_info',\n",
+       " 'add_payment_info',\n",
+       " 'select_promotion',\n",
+       " 'purchase',\n",
+       " 'click',\n",
+       " 'view_item_list']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_df.event_name.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bffd965",
    "metadata": {},
    "outputs": [],
    "source": []
